@@ -82,7 +82,6 @@ Description
          }
     }
     void mydump(volVectorField &U, float *tmp_buffer){
-        int i;
         float *tmp = tmp_buffer;
         forAll(U, i)
         {
@@ -92,6 +91,62 @@ Description
 
             //Info<<" point "<< i << ": "<< tmp[0] <<" " << tmp[1]<< " "<<tmp[2]<< endl;
             tmp+=3;
+        }
+    }
+
+    void mydump(volScalarField &p, float *tmp_buffer,int points_per_dim, int bottom_most, int right_most){
+        int ii, jj;
+        ii = 0;
+        jj = 0;
+
+        float * tmp = tmp_buffer;
+        forAll(p , i)
+         {
+             // if this isn't a block in the boundary, don't write right/bottom most 
+             if((bottom_most !=1&&ii == points_per_dim -1) || (right_most !=1&& jj==points_per_dim-1)){
+                     ;
+              }
+             else{
+                *(tmp++) = p[i];
+            }
+
+             jj+=1;
+
+             // control loop
+             if(jj%points_per_dim == 0){
+                 jj =0;
+                 ii +=1;
+             }
+         }
+    }
+    void mydump(volVectorField &U, float *tmp_buffer,int points_per_dim, int bottom_most, int right_most){
+
+        int ii, jj;
+        ii = 0;
+        jj = 0;
+        float *tmp = tmp_buffer;
+        forAll(U, i)
+        {
+            // don't writte right/bottom boundary for some block
+            if((bottom_most !=1&&ii == points_per_dim -1) || (right_most !=1&& jj==points_per_dim-1)){
+                     ;
+              }
+            else{
+            *tmp = U[i].x();
+            *(tmp+1) = U[i].y();
+            *(tmp+2) = U[i].z();
+
+            //Info<<" point "<< i << ": "<< tmp[0] <<" " << tmp[1]<< " "<<tmp[2]<< endl;
+            tmp+=3;
+            }
+
+             jj+=1;
+
+             // control loop
+             if(jj%points_per_dim == 0){
+                 jj =0;
+                 ii +=1;
+             }
         }
     }
 #endif
@@ -135,10 +190,15 @@ int main(int argc, char *argv[])
 
     // check the size and get
         int procs_per_dim = (int)std::sqrt(nprocs);
+        int points_per_dim = (int)std::sqrt(num_points);
 
         // cartisian position
         int proc_row_pos = rank/procs_per_dim;
         int proc_col_pos = rank%procs_per_dim;
+
+        // whether its the last proc in each dim
+        int flag_bottom_most = 0;
+        int flag_right_most = 0;
 
         // icofoam size
         int case_length = CASE_LENGTH;
@@ -148,9 +208,24 @@ int main(int argc, char *argv[])
         bounds[0]=(case_length)*proc_row_pos;
         bounds[1]=(case_length)*proc_col_pos;
 
+        // don't overlap
+        if(proc_col_pos == procs_per_dim-1){
+            bounds[4]=(case_length)*(proc_col_pos+1);
+            flag_right_most = 1;
+        }
+        else{
+            bounds[4]=(case_length)*(proc_col_pos+1) - 1;
+        }
+
         // we want 1 line overlap (consistent with dividing in consumer)
-        bounds[3]=case_length*(proc_row_pos+1) ;
-        bounds[4]=case_length*(proc_col_pos+1) ;
+        if(proc_row_pos == procs_per_dim-1){
+            bounds[3]=case_length*(proc_row_pos+1) ;
+            flag_bottom_most = 1;
+        }
+        else{
+            bounds[3]=case_length*(proc_row_pos+1)-1 ;
+        }
+
 
         // Initalize DataSpaces
         // # of Peers, Application ID, ptr MPI comm, additional parameters
@@ -173,9 +248,6 @@ int main(int argc, char *argv[])
             exit(-1);
         }
 
-        // data layout
-        //int dims[3] = {1, POINTS_SIDE, POINTS_SIDE};
-        //int num_points = dims[0]*dims[1]*dims[2];
 
         // time 
         double time_comm_vel;
@@ -184,6 +256,12 @@ int main(int argc, char *argv[])
         char var_name_pres[STRING_LENGTH];
         sprintf(var_name_vel, "VEL");
         sprintf(var_name_pres, "PRES");
+
+
+        // data layout
+        uint64_t gdims_raw[3] = {POINTS_SIDE, POINTS_SIDE,1};
+        dspaces_define_gdim(var_name_vel, 3,gdims_raw);
+        dspaces_define_gdim(var_name_pres, 3,gdims_raw);
 
         /*
         char var_name_vel_2[STRING_LENGTH];
@@ -286,15 +364,19 @@ int main(int argc, char *argv[])
     // if use  dataspces, write the correct 
         //put_vel_buffer(timestep, NULL,rank, &gcomm, &vel_data, &time_comm_vel);
         // dump data from U and P into buffer
-        mydump(p, pres_data);
-        mydump(U, vel_data);
+        printf("points_per_dim %d, flag_bottom_most %d, flag_right_most %d\n", points_per_dim, flag_bottom_most, flag_right_most);
+        mydump(p, pres_data, points_per_dim,flag_bottom_most, flag_right_most);
+        mydump(U, vel_data, points_per_dim,flag_bottom_most, flag_right_most);
 
         /*
         Info<<" first data, address"<< vel_data << ": "<< vel_data[0] <<" " << vel_data[1]<< " "<<vel_data[2]<< endl;
        printf(" first data, address %p: %f %f %f\n", vel_data, vel_data[0], vel_data[1], vel_data[2]);
        */
         //if(count%interval == 0){
-            put_raw_buffer(timestep, bounds, &num_points ,rank, &gcomm, var_name_vel,  &vel_data,var_name_pres, &pres_data, &time_comm_vel);
+
+        put_raw_buffer(timestep, bounds, &num_points ,rank, &gcomm, var_name_vel,  &vel_data,var_name_pres, &pres_data, &time_comm_vel);
+
+        MPI_Barrier(gcomm);
 
         // in case dspaces cannot read twice
         //put_raw_buffer(timestep, &num_points ,rank, &gcomm, var_name_vel_2,  &vel_data,var_name_pres_2, &pres_data, &time_comm_vel);
