@@ -19,7 +19,7 @@ extern "C" {
 
 // whether or not using same lock eachtime, only affect the ds_adaptor
 // only affect raw data, writer won't start new
-#define USE_SAME_LOCK
+//#define USE_SAME_LOCK
 
 #include "stdlib.h"
 #include "stdio.h"
